--- a/Expense-Tracker/style.css
+++ b/Expense-Tracker/style.css
@@ -1,10 +1,12 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-body, html{
+
+body,
+html {
     width: 100%;
     height: 100%;
 }
@@ -18,40 +20,57 @@ body, html{
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+    background: #f1f1f1;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: green; 
+    background: green;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: rgb(104, 165, 104); 
-  }
-
-.root{
-    width: fit-content;
+    background: rgb(104, 165, 104);
 }
 
-.t-inc{
+.root {
+    width: fit-content;
+    background-color: white;
+    display: flex;
+    margin: auto;
+    padding: 2%;
+    padding-top: 1%;
+    justify-content: center;
+    text-align: center;
+    border-width: 6px;
+    border: 6px grey;
+    box-sizing: content-box;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    min-height: 30vh;
+    margin-top: 40px;
+
+}
+
+.t-inc {
     color: green;
 }
-.vertical{
+
+.vertical {
     border-left: 4px solid green;
     height: 100px;
 }
-.t-exp{
+
+.t-exp {
     color: red;
 }
 
-.total{
+.total {
     display: flex;
-   align-items: center;
-   gap: 30px;
+    align-items: center;
+    gap: 30px;
 }
-.total-balance{
+
+.total-balance {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -61,11 +80,73 @@ body, html{
     padding: 3%;
     margin-top: 40px;
 }
-.balance-heading{
+
+.balance-heading {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.balance-heading i{
+
+.balance-heading i {
     color: green;
+}
+
+#table {
+    border-collapse: collapse;
+    width: 50vw;
+    font-size: 18px;
+    border: 1px solid #ddd;
+}
+
+#table th,
+#table td {
+    text-align: left;
+    padding: 12px;
+}
+
+#table tr {
+    border-bottom: 1px solid #ddd;
+}
+
+#table tr {
+    background-color: lightgreen !important;
+}
+
+.inputItem {
+    display: flex;
+    flex-direction: row;
+    font-weight: bolder;
+    font-size: large;
+    padding: 1%;
+}
+
+input,
+select,
+option {
+    padding: 2%;
+    border-radius: 5px;
+    margin: 2%;
+}
+button{
+    font-size: large;
+    border-radius: 5px;
+    padding: 1%;
+}
+.zoom {
+    color: black;
+    transition: transform .2s;
+
+}
+
+.zoom:hover {
+    transform: scale(1.23);
+
+    color: green;
+}
+.items{
+    margin: 0 30px;
+}
+.vertical-2{
+    border-left: 4px solid green;
+    height: auto;
 }
