--- a/Expense-Tracker/style.css
+++ b/Expense-Tracker/style.css
@@ -1,43 +1,46 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+/* style.css*/
+
+/* Style to body tag*/
+body {
+    display: flexbox;
+    text-align: center;
+    align-items: center;
+}
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
-body,
-html {
-    width: 100%;
-    height: 100%;
+/* Style to expense summary */
+.summary {
+    width: 25rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 40px;
+    padding: 1%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 
-/* width */
-::-webkit-scrollbar {
-    width: 10px;
-    scroll-behavior: smooth;
+.total {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
+.total>div {
+    width: 200px;
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: green;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: rgb(104, 165, 104);
-}
-
+/* Style for the expense table and input form*/
 .root {
     width: fit-content;
     background-color: white;
     display: flex;
-    margin: auto;
     padding: 2%;
     padding-top: 1%;
     justify-content: center;
@@ -47,72 +50,43 @@ html {
     box-sizing: content-box;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     min-height: 30vh;
-    margin-top: 40px;
-
 }
 
-.t-inc {
-    color: green;
-}
 
+/* Style for the verticle bar*/
 .vertical {
-    border-left: 4px solid green;
-    height: 100px;
+    color: rgb(35, 35, 106);
+    margin: 0 2%;
+    border-width: 2px;
 }
 
-.t-exp {
-    color: red;
-}
-
-.total {
-    display: flex;
-    align-items: center;
-    gap: 30px;
-}
-
-.total-balance {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 25rem;
-    margin: auto;
-    padding: 3%;
-    margin-top: 40px;
-}
-
-.balance-heading {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.balance-heading i {
-    color: green;
-}
-
+/* Style for table*/
 #table {
     border-collapse: collapse;
     width: 50vw;
-    font-size: 18px;
     border: 1px solid #ddd;
+    font-size: 18px;
 }
 
+/* Table */
 #table th,
 #table td {
     text-align: left;
     padding: 12px;
 }
 
+/* Table row */
 #table tr {
     border-bottom: 1px solid #ddd;
 }
 
-#table tr {
-    background-color: lightgreen !important;
+/* Headings*/
+#table tr.titles {
+    background-color: lightgreen;
 }
 
-.inputItem {
+/* Style for each input item */
+.inputitem {
     display: flex;
     flex-direction: row;
     font-weight: bolder;
@@ -127,11 +101,13 @@ option {
     border-radius: 5px;
     margin: 2%;
 }
-button{
+
+button {
     font-size: large;
     border-radius: 5px;
     padding: 1%;
 }
+
 .zoom {
     color: black;
     transition: transform .2s;
@@ -142,11 +118,4 @@ button{
     transform: scale(1.23);
 
     color: green;
-}
-.items{
-    margin: 0 30px;
-}
-.vertical-2{
-    border-left: 4px solid green;
-    height: auto;
 }
